:koko::bento: Updated at https://danielx.net/editor/

--- a/style.styl
+++ b/style.styl
@@ -19,11 +19,8 @@ main
     display: flex
     flex-direction: column
 
-    &:first-child
-      width: 200px
-
     &:nth-child(2)
-      flex: 1 1 auto
+      flex: 1
 
       > section
         display: flex
@@ -33,7 +30,6 @@ ul.filetree
   display: block
   margin: 0
   padding: 0
-  width: 200px
   overflow-x: hidden
   overflow-y: auto
   z-index: 2
