--- a/style.styl
+++ b/style.styl
@@ -6,7 +6,9 @@ html, body
 
 body
   display: flex
+  flex-direction: row
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
+  font-size: 16px
   font-weight: 300
   margin: 0
 
@@ -120,12 +122,18 @@ search-results
     right: 1em
 
 actions
-  display: block
+  display: inline
   flex: 1
   height: 40px
 
-  button
+  > button
+    font-size: 14px
+    margin-bottom: 0.25em
     margin-right: 0.25em
+
+div.status
+  margin-left: 0.25em
+  white-space: nowrap
 
 .repo_info
   border-bottom: 1px solid black
