:aerial_tramway::aquarius: Updated at https://danielx.net/editor/

--- a/style.styl
+++ b/style.styl
@@ -12,6 +12,9 @@ body
   font-weight: 300
   margin: 0
 
+.hidden
+  display: none
+
 main
   display: flex
   flex-direction: row
@@ -131,7 +134,8 @@ actions
     margin-bottom: 0.25em
     margin-right: 0.25em
 
-div.status
+github-status
+  display: block
   margin-left: 0.25em
   white-space: nowrap
 
