:full_moon_with_face::moyai: Updated at https://danielx.net/editor/

--- a/style.styl
+++ b/style.styl
@@ -150,10 +150,10 @@ github-status
 .console-wrap
   display: block
   height: 100px
+  overflow: auto
 
   > .errors
     box-sizing: border-box
-    border-top: 1px solid black
     color: red
     margin-top: 0
 
@@ -161,6 +161,7 @@ github-status
       margin-bottom: 0
 
 #ace
+  border-bottom: 1px solid black
   flex: 1
 
 .ace_search_form
